# turtlebot3_line_follower

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: line_follower.launch
scripts/: detector.py  follower.py  motion.py
world/: world.world
world/maze/: model.config  model.sdf
world/path/: model.config  model.sdf
